new work with objects

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
@@ -11,16 +10,23 @@
     <img class="fon" src="https://i.pinimg.com/originals/0e/59/a2/0e59a2140704e4ac1fd5c2109506d101.jpg">
     <div class="left-panel">
         <div class="a-panel-in-left-panel">
-            <div class="block-with-avatar"><div class="avatar"></div><div class="text">бздун</div></div>
+            <div class="block-with-avatar"><div class="avatar"></div><div class="text"></div></div>
             </div>
-            <div onclick="myFunction1()"  class="b-panel-in-left-panel">account information</div>
-            <div onclick="myFunction2()"class="c-panel-in-left-panel">favorite dishes</div>
-            <div onclick="myFunction3()" class="d-panel-in-left-panel">dish search</div>
+            <div onclick="myFunction1()" id="bpanelinleftpanel" class="b-panel-in-left-panel">account information</div>
+            <div onclick="myFunction2()" id="cpanelinleftpanel" class="c-panel-in-left-panel">favorite dishes</div>
+            <div onclick="myFunction3()" id="dpanelinleftpanel" class="d-panel-in-left-panel">dish search</div>
 
     </div>
 
-    <div id="rightpanel1" class="right-panel1"></div>
-    <div id="rightpanel2" class="right-panel2"><div class="blydo"></div><div class="add-dish">add a dish</div></div>
+    <div id="rightpanel1" class="right-panel1">
+        <div class="blydo1"></div>
+    </div>
+    <div id="rightpanel2" class="right-panel2"><div class="blydo">
+        
+    </div>
+    <div class="dishplace">
+        <div class="add-dish">add a dish</div></div>
+    </div>
     <div id="rightpanel3" class="right-panel3"></div>
     <script src="js.js"></script>
 
