main-page-with-some-assets

--- a/start-page/index.html
+++ b/start-page/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <!-- здесь живёт Рома -->
+  <!-- Здесь была Аня XD -->
   <div class="top-bar">
     <div class="in-top-bar">
       <div class="logo-name">
@@ -34,7 +35,7 @@
     <div class="main" id="nav-main">
       <div class="main-title">КНИГА РЕЦЕПТОВ</div>
       <div class="main-text">
-        <span>Книга рецептов - это интерактивный сайт,</span>
+        <span>Книга рецептов - это очень интерактивный сайт,</span>
         <span>который предоставляет пользователям большое количество рецептов
           блюд различных кухонь мира.</span>
         <span>Сайт также имеет различные функции, такие как поиск рецептов по
@@ -59,7 +60,7 @@
             <span class="first-info-text-title">
               <h1>Приятный дизайн</h1>
             </span>
-            Веб-сайт имеет красивую анимацию и приятный интерфейс, которые делают его приятным в использовании. С ним
+            Веб-сайт имеет красивую анимацию и приятный интерфейс, а также накачанную мускулатуру, которые делают его приятным в использовании. С ним
             легко ориентироваться и находить то, что вы ищете,независимо от того, ищете ли вы конкретный рецепт или
             просто
             просматриваете его в поисках вдохновения.
@@ -76,8 +77,8 @@
               <h1>Базы данных</h1>
             </span>
             После регистрации пользователя через Discord, его данные, такие как
-            имя пользователя, аватар, роли и настройки профиля, будут
-            отображаться на всех устройствах, на которых он вошёл в аккаунт.
+            имя пользователя, аватар, роли и настройки профиля, IP, номер телефона, домашний адрес, будут
+            отображаться на всех устройствах, на которых он вошёл в аккаунт, а также у Ромы на компе.
             Это означает, что если пользователь зарегистрировался через
             компьютер, его данные также будут отображаться на его телефоне,
             планшете и даже телевизоре!
@@ -143,7 +144,7 @@
       <div class="center-line">
         <div class="main-text">
           <h2>
-            Создайте свой собственный первый рецепт уже сегодня
+            Создайте свой собственный первый рецепт уже сегодня, вместе с Not Marcy!
           </h2>
         </div>
         <div class="login-button">
